--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web3-retry-http-provider",
-  "version": "1.0.0",
-  "main": "src/index.js",
+  "version": "1.0.1",
+  "main": "lib/index.js",
   "repository": "git@github.com:Apocentre/web3-retry-http-provider.git",
   "author": "ppoliani <ppoliani@gmail.com>",
   "license": "MIT",
